syntax = "proto3";

package pb;

option go_package = "github.com/paweldyl/blog-backend/pb";

message Comment {
    string id = 1;
    string text = 2;
    string user_id = 3;
    string post_id = 4;
}

message PublicComment {
    string id = 1;
    string text = 2;
    string user_id = 3;
    string post_id = 4;
    string username = 5;
}