syntax = "proto3";

package pb;

import "comment/comment.proto";

option go_package = "github.com/paweldyl/blog-backend/pb";

message GetPostCommentsRequest {
    string post_id = 1;
    int32 per_page = 2;
    int32 page = 3;
}

message GetPostCommentsResponse {
    repeated PublicComment comments = 1;
    bool next_page_exists = 2;
}

